# lmstudio-firefox-proxy

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
static/: chat.css  chat.html  chat.js  landing.html
